--- a/prueba-web/style.css
+++ b/prueba-web/style.css
@@ -1,3 +1,38 @@
 *{
     margin: 0;
 }
+
+header{
+    width: 100%;
+    height: 120px;
+    background-color: rgb(108, 146, 108);
+} 
+
+
+header ul{
+    width: 60%;
+    height: 50px;
+    margin-left:15% ;
+    
+    position: relative;
+    top:10px;
+    display: flex;
+    justify-content: center;
+    
+    gap: 25%;
+}
+header ul li{
+    display: flex;
+    gap: 2%;
+    justify-items: center;
+    justify-content: center;
+}
+header ul li a{
+    color: aliceblue;
+}
+body{
+    background-color: rgb(158, 115, 115);
+}
+body h2{
+    color: azure;
+}
